# Corelantic

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  compose.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/adapters/: factory.py
apps/api/app/adapters/data/: azure_sql.py  base.py  fixture.py  mssql.py  seed.py  sqlite.py
apps/api/app/adapters/llm/: base.py
apps/api/app/api/: dependencies.py  middleware.py  router.py  security.py
apps/api/app/api/routes/: catalog.py  metrics.py  nlq.py  query.py
apps/api/app/core/: config.py  logging.py
apps/api/app/query/: compiler.py  errors.py  formula.py  intent.py  rows.py  time.py  validate.py
apps/api/app/schemas/: catalog.py  chart.py  error.py  health.py  metric.py  nlq.py  query.py
apps/api/app/semantic/: capability.py  errors.py  formula.py  joins.py  models.py  registry.py  resolve.py
apps/api/app/services/: catalog.py  chart.py  chart_errors.py  metrics.py  result.py
apps/api/scripts/: export_openapi.py  validate_registry.py
apps/api/semantic/: gold_tspot.yaml  leads.example.yaml  telephony.yaml
apps/api/tests/: conftest.py  test_azure_sql.py  test_capability.py  test_catalog.py  test_catalog_route.py  test_chart.py  test_compiler.py  test_dialects.py  test_error_contract.py  test_fixture.py  test_formula.py  test_internal_auth.py  test_joins.py  test_loader.py  test_metrics_route.py  test_query_route.py  test_registry.py  test_result.py  test_settings.py  test_time.py
(+74 files in other folders)
